--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ html{
 body{	
 	font-size: 1.6rem; 
 	font-weight: 400;
-	background: url(../images/bg.png) no-repeat scroll center center / 100% 100%;
+	background: url(../images/bg.png) no-repeat scroll center center / cover;
 	font-family: "Outfit", sans-serif;
 }
 h1,h2,h3,h4,h5,h6,p{
@@ -23,8 +23,7 @@ ul{
 ul li a,a{
 	text-decoration: none;
 }
-
-
+ 
 p {
 	font-size: 18px;
 	color: #fff;
