--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,11 +85,15 @@ p {
 	border-radius: 8px;
 	color: #E73DFF;
 	font-size: 20px;
-	font-weight: 900;
+	font-weight: 600;
 	transition: 0.3s; 
 	display: flex;
 	align-items: center;
 	gap: 10px;
+}
+
+.single_partner {
+	text-align: center;
 }
 
 .btn_1:hover {
@@ -98,12 +102,12 @@ p {
 }
 
 .btn_2 {
-	padding: 8px 17px;
+	padding: 14px 15px;
 	background: #E73DFF;
 	border-radius: 8px;
 	color: #fff;
 	font-size: 20px;
-	font-weight: 900;
+	font-weight: 600;
 	transition: 0.3s;
 
 }
@@ -126,11 +130,27 @@ p {
 }
 
 .btn_1.social_btn {
-	height: 40px;
-	width: 44px;
+	height: 55px;
+	width: 55px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+
+.banner_area{
+	position: relative;
+}
+
+.banner_blor {
+	position: absolute;
+	top: 0;
+	right: 0;
+	z-index: 9;
+}
+
+.banner_contentt {
+	position: relative;
+	z-index: 99;
 }
 
 .banner_right img {
@@ -169,6 +189,14 @@ p {
 	font-family: 'MALDINI';
 }
 
+.seaeson_blur {
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 9;
+	width: 100%; 
+}
+
 .season_rightt {
 	text-align: center;
 }
@@ -188,8 +216,19 @@ p {
 .season_img {
 	position: absolute;
 	left: -70px;
-	top: 12px;
+	top: 25px;
 	z-index: 999999;
+}
+
+.season_orgin_img{
+	position: relative;
+	z-index: 99;
+}
+
+.season_btn a {
+	width: 218px;
+	text-align: center;
+	justify-content: center;
 }
 
 .season_rightt p {
@@ -308,7 +347,7 @@ p {
 .game_img{
 	text-align: center;
 	margin-bottom: 25px;
-}
+} 
 
 .single_game li img {
 	width: 48px;
@@ -353,7 +392,7 @@ p {
 	position: relative;
 	z-index: 99;
 }
-
+.game_area,
 .discover_content {
 	position: relative;
 }
@@ -367,6 +406,60 @@ p {
 	top: -355px;
 }
 
+.game_left_blur {
+	position: absolute;
+	z-index: 9;
+	left: 0;
+	top: 0; 
+	bottom: 0;
+	margin: auto 0;
+}
+
+.game_right_blur {
+	position: absolute;
+	z-index: 9;
+	right: 0;
+	top: 0; 
+	bottom: 0;
+	margin: auto 0;
+}
+
+.game_box{
+	position: relative;
+	z-index: 9999;
+}
+
+.rewords_area {
+	position: relative;
+}
+
+.rewords_box {
+	position: relative;
+	z-index: 99;
+}
+
+.reword_blur{
+	position: absolute;
+	top: -250px;
+	right: 0;
+	z-index: 9;
+}
+
+.reword_blur_top_left {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	z-index: 9;
+	width: 336px;
+}
+
+.reword_blur_bottom_left{
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 9;
+	width: 268px;
+}
 
 .rewords_row {
 	display: flex;
@@ -431,6 +524,41 @@ p {
 	opacity: 60%;
 }
 
+.becone_area,
+.limited_area,
+.promotion_area {
+	position: relative;
+}
+.become_content,
+.limited,
+.promotion_boxx{
+	position: relative;
+	z-index: 99;
+}
+
+.limited_blur,
+.promotion_blur{
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 453px;
+	z-index: 9;
+}
+
+.beacome_blur{
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 342px;
+	z-index: 9;
+	height: 509px;
+}
+
+.beacome_blur img {
+	width: 100%;
+	height: 100%;
+}
+
 .promotion_top_text h3 {
 	font-family: 'MALDINI';
 	color: #E73DFF;
@@ -485,6 +613,24 @@ button:focus-within{
 .promotion_carsousel.owl-theme .owl-nav [class*="owl-"]:hover {
 	background: transparent; 
 }
+
+.explore_area {
+	position: relative;
+}
+
+.explore_content{
+	position: relative;
+	z-index: 99;
+}
+
+.explore_blur{
+	position: absolute;
+	z-index: 9;
+	right: 0;
+	bottom: 0;
+	width: 699px;
+}
+
 
 .explore_left {
 	background: #00000079;
@@ -699,6 +845,29 @@ button:focus-within{
         -ms-transform: rotate(360deg);
         transform: rotate(360deg);
     }
+}
+
+.btn_1.join_btn {
+	padding: 14px 15px;
+	margin-right: 17px;
+}
+
+.partners_content{
+	position: relative;
+}
+
+.partner_content_box{
+	position: relative;
+	z-index: 99;
+}
+
+.partner_img_blur img {
+	position: absolute;
+	z-index: 9;
+	width: 100%;
+	top: 0;
+	left: 0;
+	margin: 0 auto;
 }
 
 /*======================  End Page  ======================*/
