--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -870,6 +870,34 @@ button:focus-within{
 	margin: 0 auto;
 }
 
+.dekstop_hide{
+	display: none;
+}
+
+.mobile_hide{
+	display: block;
+}
+
+.mobile_menu {
+	position: absolute;
+	top: 108px;
+	width: 100%;
+	align-items: center;
+	z-index: 9999;
+	background-color: #191724;
+	left: 0;
+	padding: 25px 0;
+	height: 100vh;
+	display: none;
+}
+
+.mobile_menu ul {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	gap: 17px;
+}
+
 /*======================  End Page  ======================*/
 
 
