--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
  
+ 
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap'); 
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
 
@@ -11,6 +12,7 @@ body{
 	font-weight: 400;
 	background: url(../images/bg.png) no-repeat scroll center center / 100% 100%;
 	font-family: "Outfit", sans-serif;
+	overflow: hidden;
 }
 h1,h2,h3,h4,h5,h6,p{
 	margin: 0;
@@ -42,25 +44,41 @@ p {
 }
 
 .header {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
-	justify-content: space-between;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 }
 
 .logo {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	gap: 29px;
 }
 
 .logo_btn {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	gap: 28px;
 }
 
 .logo_main {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	gap: 10px;
 }
 
@@ -86,9 +104,15 @@ p {
 	color: #E73DFF;
 	font-size: 20px;
 	font-weight: 600;
+	-webkit-transition: 0.3s;
+	-o-transition: 0.3s;
 	transition: 0.3s; 
+	display: -webkit-box; 
+	display: -ms-flexbox; 
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	gap: 10px;
 }
 
@@ -108,6 +132,8 @@ p {
 	color: #fff;
 	font-size: 20px;
 	font-weight: 600;
+	-webkit-transition: 0.3s;
+	-o-transition: 0.3s;
 	transition: 0.3s;
 
 }
@@ -118,23 +144,37 @@ p {
 }
 
 .download .btn_2 {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	gap: 10px;
 }
 
 .header_social ul {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	gap: 10px;
 }
 
 .btn_1.social_btn {
 	height: 55px;
 	width: 55px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
-	justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 }
 
 .banner_area{
@@ -208,9 +248,13 @@ p {
 }
 
 .season_btn {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	gap: 50px;
-	justify-content: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 }
 
 .season_img {
@@ -228,7 +272,9 @@ p {
 .season_btn a {
 	width: 218px;
 	text-align: center;
-	justify-content: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 }
 
 .season_rightt p {
@@ -334,9 +380,15 @@ p {
 }
 
 .single_game ul li {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
-	justify-content: space-between;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	padding: 17px 50px; 
 	background: #000;
 	margin-bottom: 25px;
@@ -373,9 +425,15 @@ p {
 }
 
 .discover_content {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
-	justify-content: space-between;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 }
  
 
@@ -384,7 +442,9 @@ p {
 }
 
 .discover_content_left {
-	flex: 0 0 34%;
+	-webkit-box-flex: 0;
+	    -ms-flex: 0 0 34%;
+	        flex: 0 0 34%;
 	text-align: center;
 }
 
@@ -462,8 +522,12 @@ p {
 }
 
 .rewords_row {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 
 }
 
@@ -496,10 +560,16 @@ p {
 	background: #000000b2;
 	width: 100%;
 	height: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center; 
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center; 
 	opacity: 0;
 	visibility: hidden;
+	-webkit-transition: 0.5s;
+	-o-transition: 0.5s;
 	transition: 0.5s;
 }
 
@@ -704,6 +774,8 @@ button:focus-within{
 }
 
 .become_btn {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	gap: 50px;
 	margin-top: 49px;
@@ -719,6 +791,8 @@ button:focus-within{
 }
 
 .footer_menu ul {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	gap: 50px;
 }
@@ -728,6 +802,8 @@ button:focus-within{
 	opacity: 50%;
 	font-family: "Krona One", sans-serif;
 	font-size: 18px;
+	-webkit-transition: 0.3s;
+	-o-transition: 0.3s;
 	transition: 0.3s;
 }
 
@@ -736,8 +812,12 @@ button:focus-within{
 }
 
 .footer_social ul {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: flex-end;
+	-webkit-box-pack: end;
+	    -ms-flex-pack: end;
+	        justify-content: flex-end;
 	gap: 14px;
 }
 
@@ -753,8 +833,12 @@ button:focus-within{
 }
 
 .header_cond_term ul {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: flex-end;
+	-webkit-box-pack: end;
+	    -ms-flex-pack: end;
+	        justify-content: flex-end;
 	gap: 48px;
 }
 
@@ -762,6 +846,8 @@ button:focus-within{
 	font-size: 16px;
 	opacity: 50%;
 	color: #fff;
+	-webkit-transition: 0.3s;
+	-o-transition: 0.3s;
 	transition: 0.3s;
 }
 
@@ -882,7 +968,9 @@ button:focus-within{
 	position: absolute;
 	top: 108px;
 	width: 100%;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	z-index: 9999;
 	background-color: #191724;
 	left: 0;
@@ -892,9 +980,16 @@ button:focus-within{
 }
 
 .mobile_menu ul {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
-	flex-direction: column;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 	gap: 17px;
 }
 
