--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ p {
 /*======================  Start Page  ======================*/
 
 .header_area {
-	padding: 41px 0;
+	padding: 41px 0; 
 }
 
 .header {
@@ -97,8 +97,9 @@ p {
 	color: #E73DFF;
 }
 
-.btn_1 {
-	padding: 8px 20px;
+.btn_1 { 
+	width: 146px;
+	height: 45px;
 	background: #fff;
 	border-radius: 8px;
 	color: #E73DFF;
@@ -113,11 +114,27 @@ p {
 	-webkit-box-align: center;
 	    -ms-flex-align: center;
 	        align-items: center;
-	gap: 10px;
+	gap: 10px; 
+	justify-content: center;
 }
 
 .single_partner {
 	text-align: center;
+}
+
+.single_partner img {
+    transition: opacity 2s ease; /* Smooth transition for opacity */
+    opacity: 1; /* Default opacity */
+}
+
+.btn_1.join_btn img {
+	margin-left: 10px;
+}
+
+.logo_btn a {
+	width: 160px;
+	text-align: center;
+	justify-content: center;
 }
 
 .btn_1:hover {
@@ -126,7 +143,8 @@ p {
 }
 
 .btn_2 {
-	padding: 14px 15px;
+	width: 146px;
+	height: 45px;
 	background: #E73DFF;
 	border-radius: 8px;
 	color: #fff;
@@ -135,7 +153,13 @@ p {
 	-webkit-transition: 0.3s;
 	-o-transition: 0.3s;
 	transition: 0.3s;
-
+	display: -webkit-box; 
+	display: -ms-flexbox; 
+	display: flex;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	justify-content: center;
 }
 
 .btn_2:hover {
@@ -164,17 +188,17 @@ p {
 }
 
 .btn_1.social_btn {
-	height: 55px;
-	width: 55px;
+	height: 45px;
+	width: 45px;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
 	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+	-ms-flex-pack: center;
+	justify-content: center;
 }
 
 .banner_area{
@@ -191,6 +215,19 @@ p {
 .banner_contentt {
 	position: relative;
 	z-index: 99;
+}
+
+.season_area {
+	margin: 160px 0 0 0;
+} 
+
+
+.btn_blur img {
+	width: 282px;
+	height: 184px;
+	position: absolute;
+	bottom: -56px;
+	left: 0;
 }
 
 .banner_right img {
@@ -211,11 +248,13 @@ p {
 }
 
 .banner_left a {
-	width: 185px;
+	width: 280px;
+	height: 63px;
+	position: relative;
+	z-index: 9999;
 }
 
 .season {
-	padding: 103px 40px 117px 40px;
 	border-radius: 41px;
 	position: relative;
 	overflow: hidden;
@@ -239,6 +278,7 @@ p {
 
 .season_rightt {
 	text-align: center;
+	padding: 103px 40px 117px 40px;
 }
 
 .season_rightt h4 {
@@ -260,22 +300,37 @@ p {
 .season_img {
 	position: absolute;
 	left: -70px;
-	top: 25px;
+	top: 0;
 	z-index: 999999;
+	height: 100%;
 }
 
-.season_orgin_img{
+.season_orgin_img {
 	position: relative;
 	z-index: 99;
+	height: 100%;
+	width: 95%;
 }
 
-.season_btn a {
-	width: 218px;
+.season_btn a.btn_2 {
+	width: 302px;
 	text-align: center;
 	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	height: 77px;
 }
+
+.season_btn a.btn_1 {
+	width: 262px;
+	text-align: center;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	height: 77px;
+}
+
+
 
 .season_rightt p {
 	margin: 12px auto 26px auto;
@@ -394,6 +449,8 @@ p {
 	margin-bottom: 25px;
 	border-radius: 10px;
 	width: 94%;
+	transition: border 0.3s ease;
+	border: 4px solid transparent; 
 }
 
 .game_img{
@@ -491,6 +548,7 @@ p {
 
 .rewords_area {
 	position: relative;
+	/* overflow: hidden; */
 }
 
 .rewords_box {
@@ -498,11 +556,22 @@ p {
 	z-index: 99;
 }
 
-.reword_blur{
+.reword_blur {
 	position: absolute;
 	top: -250px;
 	right: 0;
 	z-index: 9;
+	width: 453px;
+}
+
+/* .single_partner img.active {
+	border: 2px solid #007BFF; 
+	opacity: 0.3;
+  } */
+  
+
+.reword_blur  img{ 
+	width: 100%;
 }
 
 .reword_blur_top_left {
@@ -554,7 +623,7 @@ p {
 .rewords_text {
 	text-align: center;
 	position: absolute;
-	top: -100%;
+	top: 0;
 	left: 0;
 	z-index: 99;
 	background: #000000b2;
@@ -574,7 +643,7 @@ p {
 }
 
 .single_rewords:hover .rewords_text {
-	top: 0;
+ 
 	opacity: 1;
 	visibility: visible;
 }
@@ -660,7 +729,7 @@ p {
 }
 
 .single_promotion img {
-	width: 95% !important;
+	width: 75% !important;
 	margin: 0 auto;
 }
 
@@ -701,6 +770,18 @@ button:focus-within{
 	width: 699px;
 }
 
+.explore_blur_2 {
+	position: absolute;
+	z-index: 9;
+	right: 0;
+	bottom: 0;
+	width: 699px;
+}
+
+.explore_blur_2 img {
+	width: 100%;
+}
+
 
 .explore_left {
 	background: #00000079;
@@ -710,6 +791,13 @@ button:focus-within{
 	width: 491px;
 	top: 100px;
 	left: 41px;
+	height: 535px;
+}
+
+.explore_left .btn_2 {
+	position: absolute;
+	bottom: 27px;
+	right: 28px;
 }
 
 .explore_left h4 {
@@ -729,6 +817,150 @@ button:focus-within{
 .explore_img img {
 	width: 100%;
 }
+
+.explore_img{
+	position: relative;
+}
+
+.map_1 {
+	width: 246px;
+	height: 219px;
+	/* background: #9370DB91; */
+	position: absolute;
+	bottom: 65px;
+	right: 44px;
+	z-index: 9;
+}
+
+.map_2 {
+	width: 215px;
+	height: 136px;
+	/* background: #9370DB91; */
+	position: absolute;
+	bottom: 245px;
+	right: 227px;
+	z-index: 99;
+}
+
+.map_3 {
+	width: 111px;
+	height: 145px;
+	/* background: #9370DB91; */
+	position: absolute;
+	bottom: 310px;
+	right: 398px;
+	z-index: 999;
+}
+
+.map_4 {
+	width: 100px;
+	height: 58px;
+	/* background: #9370DB91; */
+	position: absolute;
+	bottom: 414px;
+	right: 366px;
+	z-index: 9999;
+}
+
+.map_4 {
+	width: 100px;
+	height: 58px;
+	/* background: #9370DB91; */
+	position: absolute;
+	bottom: 414px;
+	right: 366px;
+	z-index: 99999;
+}
+
+.map_5 {
+	width: 215px;
+	height: 95px;
+	/* background: #9370DB91; */
+	position: absolute;
+	bottom: 430px;
+	right: 52px;
+	z-index: 999999;
+}
+
+.map_6 {
+	width: 152px;
+	height: 117px;
+	/* background: #9370DB91; */
+	position: absolute;
+	bottom: 292px;
+	right: 77px;
+	z-index: 9999999;
+}
+
+.map_7 {
+	width: 88px;
+	height: 86px;
+	/* background: #9370DB91; */
+	position: absolute;
+	bottom: 333px;
+	left: 46px;
+	z-index: 99999999;
+} 
+
+.map_8 {
+	width: 198px;
+	height: 194px;
+	/* background: #9370DB91; */
+	position: absolute;
+	bottom: 268px;
+	left: 224px;
+	z-index: 999999999;
+}
+
+.map_9 {
+	width: 148px;
+	height: 108px;
+	/* background: #9370DB91; */
+	position: absolute;
+	bottom: 334px;
+	left: 172px;
+	z-index: 9999999999;
+}
+
+.map_10 {
+	width: 59px;
+	height: 61px;
+	/* background: #9370DB91; */
+	position: absolute;
+	bottom: 169px;
+	left: 77px;
+	z-index: 99999999999;
+}
+
+.map_11 {
+	width: 220px;
+	height: 80px; 
+	/* background: #9370DB91; */
+	position: absolute;
+	bottom: 407px;
+	left: 113px;
+	z-index: 999999999999;
+}
+
+.map_12 {
+	width: 138px;
+	height: 75px;
+	/* background: #9370DB91; */
+	position: absolute;
+	bottom: 245px;
+	left: 113px;
+	z-index: 9999999999999;
+}
+
+.explore_left{
+	display: none;
+}
+
+.explore_main{
+	display: block;
+}
+
+
 
 .explore_content {
 	position: relative;
@@ -857,86 +1089,61 @@ button:focus-within{
 
 
 /* preloader  */
-
 #preloader {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: #000;
-	z-index: 9999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    z-index: 999999999;
+    display: flex; /* Centering the loader using flex */
+    align-items: center;
+    justify-content: center;
 }
 
 #loader {
     display: block;
-    position: relative;
-    left: 50%;
-    top: 50%;
     width: 150px;
     height: 150px;
-    margin: -75px 0 0 -75px;
     border-radius: 50%;
     border: 3px solid transparent;
     border-top-color: #9370DB;
-    -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
 }
-#loader:before {
+#loader:before, #loader:after {
     content: "";
     position: absolute;
+    border-radius: 50%;
+    border: 3px solid transparent;
+}
+#loader:before {
     top: 5px;
     left: 5px;
     right: 5px;
     bottom: 5px;
-    border-radius: 50%;
-    border: 3px solid transparent;
     border-top-color: #BA55D3;
-    -webkit-animation: spin 3s linear infinite;
     animation: spin 3s linear infinite;
 }
 #loader:after {
-    content: "";
-    position: absolute;
     top: 15px;
     left: 15px;
     right: 15px;
     bottom: 15px;
-    border-radius: 50%;
-    border: 3px solid transparent;
     border-top-color: #FF00FF;
-    -webkit-animation: spin 1.5s linear infinite;
     animation: spin 1.5s linear infinite;
 }
-@-webkit-keyframes spin {
-    0%   {
-        -webkit-transform: rotate(0deg);
-        -ms-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-        -ms-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
-}
+
 @keyframes spin {
-    0%   {
-        -webkit-transform: rotate(0deg);
-        -ms-transform: rotate(0deg);
+    0% {
         transform: rotate(0deg);
     }
     100% {
-        -webkit-transform: rotate(360deg);
-        -ms-transform: rotate(360deg);
         transform: rotate(360deg);
     }
 }
 
-.btn_1.join_btn {
-	padding: 14px 15px;
-	margin-right: 17px;
-}
+
 
 .partners_content{
 	position: relative;
@@ -975,7 +1182,7 @@ button:focus-within{
 	background-color: #191724;
 	left: 0;
 	padding: 25px 0;
-	height: 100vh;
+	height: 100vh; 
 	display: none;
 }
 
@@ -992,6 +1199,142 @@ button:focus-within{
 	        flex-direction: column;
 	gap: 17px;
 }
+
+.become_btn .btn_2 {
+	width: 233px;
+	height: 66px;
+}
+
+.become_btn .btn_1 {
+	width: 166px;
+	height: 66px;
+}
+
+.explore_left .btn_2 ,
+.limited_text .btn_2 {
+	width: 143px;
+	height: 57px;
+}
+
+.promotion_carsousel_2 {
+	position: relative;
+}
+
+.promotion_carsousel_2 .owl-prev {
+	position: absolute;
+	left: 0;
+	top: 36%;
+}
+
+.promotion_carsousel_2 .owl-next {
+	position: absolute;
+	left: 42%;
+	top: 36%;
+}
+
+.promotion_carsousel_2.owl-theme .owl-nav [class*="owl-"]:hover {
+	background: transparent;
+	color: #FFF;
+	text-decoration: none;
+}
+
+
+
+
+
+/* Popup Overlay */
+.popup-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+	padding-top: 200px;
+}
+
+/* Popup Content */
+.popup-content {
+	position: relative;
+	background: #fff; 
+	max-width: 700px;
+	border-radius: 8px;
+	text-align: center;
+	margin: auto;
+}
+
+.exit_img{
+	position: relative;
+}
+ 
+
+/* Close Button */
+.close-popup {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: #0091FF;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 14px;
+}
+  
+.popup-content video {
+	width: 100%;
+	border: none; 
+}
+
+.popup-content video {
+    display: block; /* Removes inline-block spacing */
+    margin: 0; /* Removes any default margin */
+    padding: 0; /* Removes any default padding */
+    border: none; /* Removes any border */
+    line-height: 0; /* Prevents spacing caused by line height */
+}
+
+.popup-content {
+    padding: 0; /* Removes padding from the container */
+}
+
+.video_btn {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0; 
+	height: 100%;
+	width: 77%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.video_btn i {
+	font-size: 65px;
+	color: #fff;
+}
+
+.exit_video video { 
+	width: 100%;
+	max-width: 1100px;
+	border-radius: 20px;
+}
+
+.exit_video {
+	display: flex;
+	align-items: center;
+}
+
+.exit_video img { 
+	transform: translateX(-25px); 
+}
+
 
 /*======================  End Page  ======================*/
 
